# dailycrowd

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  lint_output.txt  lint_results.json  lint_results.txt  next.config.ts  package-lock.json  package.json  tailwind.config.ts
anchor/crowd_oracle/: Cargo.toml
anchor/crowd_oracle/programs/crowd_oracle/: Cargo.toml
anchor/crowd_oracle/programs/crowd_oracle/src/: errors.rs  lib.rs  state.rs
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/app/account/: page.tsx
src/app/admin/: page.tsx
src/app/api/contests/: route.ts
src/app/api/cron/: route.ts
src/app/api/entries/: route.ts
src/app/results/: page.tsx
src/app/rules/: page.tsx
src/app/terminal/: page.tsx
src/app/today/: page.tsx
src/components/: AnimatedBackground.tsx  ContestCard.tsx  Countdown.tsx  DistributionChart.tsx  Docs.tsx  EntryForm.tsx  Footer.tsx  Header.tsx  Leaderboard.tsx  LiveCountdown.tsx  MaintenanceView.tsx  OracleTerminal.tsx  Providers.tsx  Rules.tsx  SliderEntry.tsx  SolanaProvider.tsx  TargetTokenCard.tsx  Tokenomics.tsx  Whitepaper.tsx
src/hooks/: useHouseBonuses.ts  usePayoutSimulation.ts  useVwapPeak.ts
src/lib/: auth.ts  game.ts  prisma.ts  pump_api.ts  utils.ts  whop.ts
src/services/: TokenDataAggregator.ts
src/services/sources/: DataSourceInterface.ts  DexscreenerSource.ts  PumpFunSource.ts  RpcSanitySource.ts
src/types/: index.ts
src/utils/: bonuses.ts  payout.ts  pumpData.ts  tokenSelection.ts  tokenSelectionConfig.ts  vwap.ts
(+6 files in other folders)
