[package]
name = "crowd_oracle"
version = "0.1.0"
description = "CROWD Oracle: Accurate Prediction Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crowd_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
winnow="0.4.1" # Required for some anchor versions in specific environments
