[package]
name = "crowd_oracle"
version = "0.1.0"
description = "CROWD Oracle: Accurate Prediction Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crowd_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
blake3 = "=1.3.3"
winnow="0.4.1"
